--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,18 @@
 <html lang="en-us">
 
   {% include head.html %}
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MC1VFZM9H"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-1MC1VFZM9H');
+  </script>
+  
+  
 
   <body class="theme-base-0d">
 
